Liquibase-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: 'localhost'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
